# speceval

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
docs/: index.md
examples/compare-models/: README.md  speceval.yaml
examples/gsm8k/: README.md  speceval.yaml
examples/mmlu/: README.md  speceval.yaml
src/speceval/: __init__.py  __main__.py  config.py  exceptions.py
src/speceval/adapters/: __init__.py  base.py  huggingface.py  openai.py
src/speceval/cli/: __init__.py  main.py
src/speceval/cli/commands/: __init__.py  compare.py  init.py  report.py  run.py  validate.py
src/speceval/compare/: __init__.py  delta.py
src/speceval/engine/: __init__.py  runner.py  task.py
src/speceval/metrics/: __init__.py  base.py  classification.py  generation.py
src/speceval/provenance/: __init__.py  environment.py
src/speceval/report/: __init__.py  html.py
src/speceval/report/templates/: report.html
src/speceval/spec/: __init__.py  hash.py  model.py  parse.py  resolve.py  validate.py
src/speceval/store/: __init__.py  base.py  sqlite.py
tests/: conftest.py  test_cli.py  test_compare.py  test_engine_runner.py  test_huggingface.py  test_metrics.py  test_openai.py  test_provenance.py  test_report_html.py  test_spec_hash.py  test_spec_parse.py  test_spec_validate.py  test_store.py
tests/fixtures/: sample_spec.yaml
