[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "speceval"
version = "0.1.0"
description = "Reproducible evaluation specifications for AI systems"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Luv Goel", email = "luvgoel@users.noreply.github.com"},
]
requires-python = ">=3.10"
keywords = ["ai", "evaluation", "benchmark", "reproducibility", "ml", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    "typer>=0.9",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "httpx>=0.25",
    "rich>=13.0",
    "jinja2>=3.1",
    "numpy>=1.24",
    "scipy>=1.10",
    # pyarrow <14.0 is affected by CVE-2023-47248 (arbitrary code exec via IPC)
    "pyarrow>=14.0",
]

[project.optional-dependencies]
huggingface = [
    "datasets>=2.14",
    "transformers>=4.36",
]
openai = [
    "openai>=1.0",
]
anthropic = [
    "anthropic>=0.30",
]
plotly = [
    "plotly>=5.15",
]
all = [
    "speceval[huggingface,openai,anthropic,plotly]",
]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    # keep in sync with .pre-commit-config.yaml ruff-pre-commit rev
    "ruff>=0.4.9",
    "mypy>=1.7",
    "pre-commit>=3.5",
    "mkdocs>=1.5",
    "mkdocs-material>=9.4",
]

[project.urls]
Homepage = "https://github.com/Luv-Goel/speceval"
Documentation = "https://github.com/Luv-Goel/speceval#readme"
Repository = "https://github.com/Luv-Goel/speceval"
Issues = "https://github.com/Luv-Goel/speceval/issues"

[project.scripts]
speceval = "speceval.cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
speceval = ["**/templates/*.html"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "RUF"]
ignore = [
    # ambiguous variable name — too noisy for research code
    "E741",
]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"
